SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Ocean_ELB_Request__c.object
<CustomObject>
    <fields>
        <fullName>ADO_Notes__c</fullName>
        <label>ADO Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AWS Accounts</label>
        <referenceTo>AWS_Accounts__c</referenceTo>
        <relationshipLabel>Ocean ELB Requests</relationshipLabel>
        <relationshipName>Ocean_ELB_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AWS_Region__c</fullName>
        <label>AWS Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_AWS_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Component__c</fullName>
        <label>Application Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSP_Option_Year__c</fullName>
        <label>CSP Option Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Processed_per_Load_Balancer__c</fullName>
        <label>Data Processed per Load Balancer</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELB_Request_ID__c</fullName>
        <displayFormat>OCEAN-ELB-{00000}</displayFormat>
        <label>ELB Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Environment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Cost__c</fullName>
        <label>Estimated Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Load_Balancing_Type__c</fullName>
        <label>Load Balancing Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Elastic_Load_Balancing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Load_Balancers__c</fullName>
        <label>Number Load Balancers</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months_Requested__c</fullName>
        <label>Number of Months Requested</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OCEAN_REQUEST</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Ocean ELB Requests</relationshipLabel>
        <relationshipName>Ocean_ELB_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request_ID__c</fullName>
        <displayFormat>ELB-{00000}</displayFormat>
        <label>Resource Request ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resource_Status__c</fullName>
        <label>Resource Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ocean_Resource_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Estimated_Cost__c</fullName>
        <label>Total Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wave_Submitted__c</fullName>
        <label>Wave Submitted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ocean ELB Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ELB_Request_ID__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Application__c</columns>
        <columns>Wave_Submitted__c</columns>
        <columns>CSP_Option_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Ocean ELB Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ocean ELB Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>